# KeyboardMilky

./: CMakeLists.txt  build.bat  build2.bat
Documentation/: 需求.md
Source/: Application.c  Application.h  main.c  main.cpp
Source/API/: API.c  API.h
Source/DockBar/: DockBar.h  DockBarTheme1.c  DockBarTheme2.c  DockBarTheme3.c
Source/EventHandles/: EventHandles.c  EventHandles.h
Source/LVGLDemo/: Application.c  Settings.h
Source/LVGLDemo/Pages/: MusicPage.h  SettingsPage.c  SettingsPage.h  ThemePage.c  ThemePage.h
Source/Pages/: ClockPage.c  ClockPage.h  MusicPage.c  MusicPage.h  SettingsPage.c  SettingsPage.h  SystemInfoPage.c  SystemInfoPage.h  ThemePage.c  ThemePage.h  WallpapperPage.c  WallpapperPage.h
Source/Pages/ClockPage/: ClockPage.c  ClockPage.h
Source/Pages/ClockPage/Theme1/: ClockPageTheme1.c
Source/Pages/ClockPage/Theme2/: ClockPageTheme2.c
Source/Pages/ClockPage/Theme3/: ClockPageTheme3.c
Source/Pages/HomePage/: HomePage.c  HomePage.h
Source/Pages/KeyboardPage/: KeyboardPage.c  KeyboardPage.h
Source/Pages/MusicPage/: MusicPage.c  MusicPage.h
Source/Pages/SettingPage/: SettingsPage.c  SettingsPage.h
Source/Pages/SettingPage/DockSettingPage/: DockSettingPage.c  DockSettingPage.h
Source/Pages/SystemInfoPage/: CPUInfoWidget.c  CPUInfoWidget.h  ClockInfoWidget.c  ClockInfoWidget.h  MemoryInfoWidget.c  MemoryInfoWidget.h  NetworkInfoWidget.c  NetworkInfoWidget.h  SystemInfoPage.c  SystemInfoPage.h  TempInfoWidget.c  TempInfoWidget.h
Source/SystemSettings/: SystemSettings.c  SystemSettings.h
Source/Theme/: Theme.h
Source/Util/: Image.h  List.c  List.h
Source/Widgets/: VolumeWidget.cpp  VolumeWidget.h  Widget.c  Widget.h
images/: pause.c  play.c
(+16 files in other folders)
